--- a/index.html
+++ b/index.html
@@ -19,20 +19,14 @@
 <div id="inicio" ></div>
 
 <!--NAV-->
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark">
-    <div class="logo fixed-top">
-
-        <h1>
-            <a href="index.html">INFO TURISMO MENDOZA</a>
-        </h1>
-    
-    </div>
+<nav class="navbar navbar-expand-lg navbar-primary bg-">
     <div class="container-fluid">
+        <a href="#" class="navbar-brand">INFO TURISMO MENDOZA</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav mx-auto">
+            <div class="navbar-nav">
                 <a href="./transporte.html"  class="nav-item nav-link">transporte</a>
                 <a href="./gastronomia.html" class="nav-item nav-link">Gastronomia</a>
                 <a href="#servicios" class="nav-item nav-link">atractivos</a>
@@ -82,16 +76,20 @@
     </a>
 </div>
 
-<div class="nosotros">
+<Section class="nosotros">
+    <div class="pagina">
 
-    <h2>SOBRE ESTA PÁGINA</h2>
-    <P>
-        Info Turismo Mendoza nacio por las diferentes necesidades que tiene el turista en encontrar información, 
-        tratamos de poner un poco de todo para que la busqueda de la misma sea mas sencilla entre lo que se
-        encontraran farmacias, kioscos, minimarket, restauranes, bares, estaciones de servicio, museos, 
-        lugares para visitar en familia, bodegas ente tantas otras cosas.
-        Queremos que el turista gaste menos tiempo buscando información.
-    </P>
+        <h2>SOBRE ESTA PÁGINA</h2>
+        <P>
+            Info Turismo Mendoza nacio por las diferentes necesidades que tiene el turista en encontrar información, 
+            tratamos de poner un poco de todo para que la busqueda de la misma sea mas sencilla entre lo que se
+            encontraran farmacias, kioscos, minimarket, restauranes, bares, estaciones de servicio, museos, 
+            lugares para visitar en familia, bodegas ente tantas otras cosas.
+            Queremos que el turista gaste menos tiempo buscando información.
+        </P>
+</Section>
+
+
     <p>
         De paso te dejamos una palabras y sus traducciones para que entiendas al mendocino
     </p>
@@ -102,10 +100,9 @@
     </ul>
 
 </div>
-
-<div class="distancias">
-    <h2>DISTANCIAS DESDE PLAZA INDEPENDENCIA</h2>
-    <div class="lugares">
+<section>
+    <div class="distancias">
+        <h2 class="text-center">DISTANCIAS DESDE PLAZA INDEPENDENCIA</h2>
         <H5>Aeropuerto</H5>
         <h5>Consulado español</h5>
         <h5>Parque General San Martin </h5>
@@ -113,8 +110,19 @@
         <h5>Universidad Nacional de Cuyo</h5>
         <h5>Aconcagua Arena</h5>
     </div>
-</div>
+</section>
+<footer>
+    <div class="contacto">
+        <h2>SI QUERES PUBLICITARTE CON NOSOTROS CONTACTATE</h2>
+    </div>
+    <div class="informacion">
+        <a href=""><i class="fa-brands fa-instagram"></i>@infoturismomendoza</a>
+        <a href=""><i class="fa-brands fa-whatsapp"></i>2616515447</a>
+        <a href=""><i class="fa-solid fa-envelope"></i>info@infoturismomendoza.com.ar</a>
+        <a href=""><i class="fa-solid fa-phone"></i>2616515447</a>
+    </div>
 
+</footer>
 
 
 
