--- a/gastronomia.html
+++ b/gastronomia.html
@@ -42,9 +42,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -52,9 +55,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -62,9 +68,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -81,9 +90,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -91,9 +103,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -101,9 +116,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -121,9 +139,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -131,9 +152,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -141,9 +165,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
