--- a/transporte.html
+++ b/transporte.html
@@ -58,6 +58,7 @@
                                 <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
                                 <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
                                 <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
                                 <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
@@ -66,9 +67,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -76,9 +80,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -95,9 +102,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -105,9 +115,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -115,9 +128,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -135,9 +151,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -145,9 +164,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
@@ -155,9 +177,12 @@
                         <div class="card">
                             <img src="./images/imagen-muestra- fondoblanco.png" class="card-img-top" alt="Sample Image">
                             <div class="card-body text-center">
-                                <h5 class="card-title">Alice Liddel</h5>
-                                <p class="card-text">Alice is a freelance web designer and developer based in London. She is specialized in HTML5, CSS3, JavaScript, Bootstrap, etc.</p>
-                                <a href="#" class="btn btn-primary">View Profile</a>
+                                <h5 class="card-title">Syrar Rent A Car</h5>
+                                <a href="https://maps.app.goo.gl/H78vAn4NgScdZ71n7" class="card-text">Sgto. Cabral 470, M5500 Capital, Mendoza</a>
+                                <a class="btn btn btn-social mx-2" data-statid="click_llamar" data-qname="Jeg" href="tel:+5492615122145"><i class="fa-solid fa-phone"></i> +54 9 261 512-2145</a>
+                                <a class="btn btn btn-social mx-2" href="https://api.whatsapp.com/send?phone=+5492615122145" target="_blank"><i class="fa-brands fa-whatsapp"></i>+54 9 261 512-2145</a>
+                                <a href="">Correo</a>
+                                <a href="#" class="btn btn-">Pagina Web</a>
                             </div>
                         </div>
                     </div>
