--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--NAV-->
 <nav class="navbar navbar-expand-lg navbar-primary bg-">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand">INFO TURISMO MENDOZA</a>
+        <a href="./index.html" class="navbar-brand">INFO TURISMO MENDOZA</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -32,7 +32,6 @@
                 <a href="./atractivos" class="nav-item nav-link">atractivos</a>
                 <a href="./paralafamilia.html" class="nav-item nav-link">para la familia</a>
                 <a href=".alojamiento" class="nav-item nav-link">alojamiento</a>
-                <a href="./contacto.html" class="nav-item nav-link">contacto</a>
             </div>
         </div>
     </div>
