--- a/paralafamilia.html
+++ b/paralafamilia.html
@@ -23,11 +23,10 @@
             <div class="navbar-nav">
                 <a href="./transporte.html"  class="nav-item nav-link">transporte</a>
                 <a href="./gastronomia.html" class="nav-item nav-link">Gastronomia</a>
-                <a href="#servicios" class="nav-item nav-link">atractivos</a>
-                <a href="#sabias" class="nav-item nav-link">para la familia</a>
-                <a href="#sabias" class="nav-item nav-link">Alojamiento</a>
-                <a href="#sabias" class="nav-item nav-link">transporte</a>
-                <a href="#contacto" class="nav-item nav-link">Contacto</a>
+                <a href="./atractivos" class="nav-item nav-link">atractivos</a>
+                <a href="./paralafamilia.html" class="nav-item nav-link">para la familia</a>
+                <a href=".alojamiento" class="nav-item nav-link">alojamiento</a>
+                <a href="./contacto.html" class="nav-item nav-link">contacto</a>
             </div>
         </div>
     </div>
