--- a/transporte.html
+++ b/transporte.html
@@ -9,9 +9,10 @@
 
 </head>
 <body>
+<!--NAV-->
     <nav class="navbar navbar-expand-lg navbar-primary bg-">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand">INFO TURISMO MENDOZA</a>
+            <a href="./index.html" class="navbar-brand">INFO TURISMO MENDOZA</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -19,11 +20,9 @@
                 <div class="navbar-nav">
                     <a href="./transporte.html"  class="nav-item nav-link">transporte</a>
                     <a href="./gastronomia.html" class="nav-item nav-link">Gastronomia</a>
-                    <a href="#servicios" class="nav-item nav-link">atractivos</a>
-                    <a href="#sabias" class="nav-item nav-link">para la familia</a>
-                    <a href="#sabias" class="nav-item nav-link">Alojamiento</a>
-                    <a href="#sabias" class="nav-item nav-link">transporte</a>
-                    <a href="#contacto" class="nav-item nav-link">Contacto</a>
+                    <a href="./atractivos" class="nav-item nav-link">atractivos</a>
+                    <a href="./paralafamilia.html" class="nav-item nav-link">para la familia</a>
+                    <a href=".alojamiento" class="nav-item nav-link">alojamiento</a>
                 </div>
             </div>
         </div>
