--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <div class="navbar-nav">
                 <a href="./transporte.html"  class="nav-item nav-link">transporte</a>
                 <a href="./gastronomia.html" class="nav-item nav-link">Gastronomia</a>
-                <a href="./atractivos" class="nav-item nav-link">atractivos</a>
+                <a href="./atractivos.html" class="nav-item nav-link">atractivos</a>
                 <a href="./paralafamilia.html" class="nav-item nav-link">para la familia</a>
-                <a href=".alojamiento" class="nav-item nav-link">alojamiento</a>
+                <a href="./alojamiento.html" class="nav-item nav-link">alojamiento</a>
             </div>
         </div>
     </div>
