--- a/atractivos.html
+++ b/atractivos.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!--CSS-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--NAV-->
@@ -17,9 +24,9 @@
                 <div class="navbar-nav">
                     <a href="./transporte.html"  class="nav-item nav-link">transporte</a>
                     <a href="./gastronomia.html" class="nav-item nav-link">Gastronomia</a>
-                    <a href="./atractivos" class="nav-item nav-link">atractivos</a>
+                    <a href="./atractivos.html" class="nav-item nav-link">atractivos</a>
                     <a href="./paralafamilia.html" class="nav-item nav-link">para la familia</a>
-                    <a href=".alojamiento" class="nav-item nav-link">alojamiento</a>
+                    <a href="./alojamiento.html" class="nav-item nav-link">alojamiento</a>
                 </div>
             </div>
         </div>
