--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div id="inicio" ></div>
 
 <!--NAV-->
-<nav class="navbar navbar-expand-lg navbar-primary bg-">
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-lg fixed-top navbar-primary bg-">
+    <div class="container-fluid ">
         <a href="./index.html" class="navbar-brand">INFO TURISMO MENDOZA</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
