--- a/paralafamilia.html
+++ b/paralafamilia.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <!--NAV-->
-<nav class="navbar navbar-expand-lg navbar-primary bg-">
+<nav class="navbar navbar-expand-lg fixed-top navbar-primary bg-">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand">INFO TURISMO MENDOZA</a>
+        <a href="./index.html" class="navbar-brand">INFO TURISMO MENDOZA</a>
         <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
