--- a/transporte.html
+++ b/transporte.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <!--NAV-->
-    <nav class="navbar navbar-expand-lg navbar-primary bg-">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-primary bg-">
         <div class="container-fluid">
             <a href="./index.html" class="navbar-brand">INFO TURISMO MENDOZA</a>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
