--- a/index.html
+++ b/index.html
@@ -87,28 +87,39 @@
         </P>
 </Section>
 
-
-    <p>
-        De paso te dejamos una palabras y sus traducciones para que entiendas al mendocino
-    </p>
-    <ul>
-        <li>Topa: Es hasta donde llega o termina algo ej: "Baja por Av. Las Heras hasta donde topa, esa es Av. San Martin ahi dobla a la derecha"</li>
-        <li>Pandito: Algo casi sin profundidad ej: "Los niños se pueden meter a la pileta por que es pandita". </li>
-        <li>Choco: Perro, cualquier perro es choco</li>
-    </ul>
-
-</div>
 <section>
     <div class="distancias">
         <h2 class="text-center">DISTANCIAS DESDE PLAZA INDEPENDENCIA</h2>
-        <H5>Aeropuerto</H5>
-        <h5>Consulado español</h5>
-        <h5>Parque General San Martin </h5>
-        <h5>Estadio Malvinas Argentinas</h5>
-        <h5>Universidad Nacional de Cuyo</h5>
-        <h5>Aconcagua Arena</h5>
+        <H6><a href="https://maps.app.goo.gl/dbYPEWxQ56JUJA9r5">Aeropuerto - 10.3km - hace click</a></H6> 
+        <H6><a href="https://maps.app.goo.gl/UEpjCzMdH3nnGodHA">Terminal de Omnibus- 2.4km - hace click</a></H6>
+        <H6><a href="https://maps.app.goo.gl/TMNyqj97VVKKffF3A">Parque General San Martin- 1.5km - hace click</a></H6>
+        <H6><a href="https://maps.app.goo.gl/emXqgLtJsdE59naX9">Estadio Malvinas Argentinas- 4.3km - hace click</a></H6>
+        <H6><a href="https://maps.app.goo.gl/qq1fdN8PhqVCKWpD8">Universidad Nacional de Cuyo- 4.0km - hace click</a></H6>
+        <H6><a href="https://maps.app.goo.gl/Y7ZbziadjnUXc6bB6">Consulado de España - 1.2km - hace click</a></H6>
+        <H6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8">Consulado de Italia- 600m - hace click</a></H6>
     </div>
 </section>
+
+<section class="lunfardo">
+    <h2>
+        EL MENDOCINO Y SUS PALABRAS
+    </h2>
+
+    <br>
+    <b>Topar:</b> acción para indicar dónde termina una calle o camino, generalmente utilizada para dar instrucciones. “Seguí derecho por esta calle hasta donde topa y ahí doblás a la izquierda”.
+    <br>
+    <b>Pando:</b> adjetivo para referirse al agua e indicar poca profundidad. “Quedate en la parte panda del río”.
+    <br>
+    <b>Choco:</b> sustantivo para referirse a un perro. “¿Le diste de comer a los chocos?”.
+    <br>
+    <b>A peteco:</b> manera de cargar a una persona en la espalda, hombros o caderas. “¿Papi, me llevás a peteco?”.
+    <br>
+    <b>Sopaipilla:</b> torta frita hecha a base de harina, cocinada en aceite o grasa de animal y espolvoreada con azúcar.
+
+</section>
+
+
+
 <footer>
     <div class="contacto">
         <h2>SI QUERES PUBLICITARTE CON NOSOTROS CONTACTATE</h2>
