--- a/index.html
+++ b/index.html
@@ -87,16 +87,50 @@
         </P>
 </Section>
 
-<section>
+<section class="interes">
     <div class="distancias">
         <h2 class="text-center">DISTANCIAS DESDE PLAZA INDEPENDENCIA</h2>
-        <H6><a href="https://maps.app.goo.gl/dbYPEWxQ56JUJA9r5">Aeropuerto - 10.3km - hace click</a></H6> 
+        <div class="lugares">
+            <div class="aeropuerto imagen">
+                <img src="./images/aeropuertomendoza.jpg" alt="">
+                <h6><a href="">Aeropuerto El Plumerillo</a></h6>
+            </div>
+            <div class="terminal imagen">
+                <img src="./images/terminal-de-mendoza.jpg" alt="">
+                <h6><a href="">Terminal de omnibus Mendoza</a></h6>
+            </div>
+            <div class="uncuyo imagen">
+                <img src="./images/uncuyo-mendoza.jpg" alt="">
+                <h6><a href="">Uncuyo Mendoza</a></h6>
+            </div>
+            <div class="malvinas imagen">
+                <img src="./images/malvinas-argentina-mendoza.jpg" alt="">
+                <h6><a href="">Estidio Malvinas Argentinas</a></h6>
+            </div>
+            <div class="italia imagen">
+                <img src="./images/consulad-italia-mendoza.jpg" alt="">
+                <h6><a href="">Consulado de Italia</a></h6>
+            </div>
+            <div class="españa imagen">
+                <img src="./images/consulado-españa-mendoza.png" alt="">
+                <h6><a href="">Consulado de España</a></h6>
+            </div>
+            <div class="Parque imagen">
+                <img src="./images/parqueGralSanMartin-mendoza.jpeg" alt="">
+                <h6><a href="">Parque Gral. San Martín</a></h6>
+            </div>
+        </div>
+
+
+
+
+        <!--<H6><a href="https://maps.app.goo.gl/dbYPEWxQ56JUJA9r5">Aeropuerto - 10.3km - hace click</a></H6> 
         <H6><a href="https://maps.app.goo.gl/UEpjCzMdH3nnGodHA">Terminal de Omnibus- 2.4km - hace click</a></H6>
         <H6><a href="https://maps.app.goo.gl/TMNyqj97VVKKffF3A">Parque General San Martin- 1.5km - hace click</a></H6>
         <H6><a href="https://maps.app.goo.gl/emXqgLtJsdE59naX9">Estadio Malvinas Argentinas- 4.3km - hace click</a></H6>
         <H6><a href="https://maps.app.goo.gl/qq1fdN8PhqVCKWpD8">Universidad Nacional de Cuyo- 4.0km - hace click</a></H6>
         <H6><a href="https://maps.app.goo.gl/Y7ZbziadjnUXc6bB6">Consulado de España - 1.2km - hace click</a></H6>
-        <H6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8">Consulado de Italia- 600m - hace click</a></H6>
+        <H6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8">Consulado de Italia- 600m - hace click</a></H6>-->
     </div>
 </section>
 
