--- a/index.html
+++ b/index.html
@@ -88,38 +88,119 @@
 </Section>
 
 <section class="interes">
-    <div class="distancias">
+    <h2 class="text-center">DISTANCIAS DESDE PLAZA INDEPENDENCIA</h2>
+    <div class="interes-up interes-all">
+        <div class="aeropuerto imagen">
+            <img src="./images/aeropuertomendoza.jpg" alt="">
+            <h6><a href="https://maps.app.goo.gl/dbYPEWxQ56JUJA9r5">Aeropuerto  MDZ. - 10.3km</a></h6>
+        </div>
+        <div class="terminal imagen">
+            <img src="./images/terminal-de-mendoza.jpg" alt="">
+            <h6><a href="https://maps.app.goo.gl/UEpjCzMdH3nnGodHA">Terminal de omnibus - 2.4km</a></h6>
+        </div>
+        <div class="Parque imagen">
+            <img src="./images/parqueGralSanMartin-mendoza.jpeg" alt="">
+            <h6><a href="https://maps.app.goo.gl/TMNyqj97VVKKffF3A">Parque Gral. San Martín - 1.5km</a></h6>
+        </div>
+    </div>
+    <div class="interes-down interes-all">
+        <div class="uncuyo imagen">
+            <img src="./images/uncuyo-mendoza.jpg" alt="">
+            <h6><a href="https://maps.app.goo.gl/qq1fdN8PhqVCKWpD8">Uncuyo Mendoza - 4.0km</a></h6>
+        </div>
+        <div class="italia imagen">
+            <img src="./images/consulad-italia-mendoza.jpg" alt="">
+            <h6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8" target="_blank">Consulado de Italia - 0.6km</a></h6>
+        </div>
+        <div class="españa imagen">
+            <img src="./images/consulado-españa-mendoza.png" alt="">
+            <h6><a href="https://maps.app.goo.gl/Y7ZbziadjnUXc6bB6">Consulado de España - 1.2km</a></h6>
+        </div>
+    </div>
+
+
+    <!--<div class="container distancias">
         <h2 class="text-center">DISTANCIAS DESDE PLAZA INDEPENDENCIA</h2>
-        <div class="lugares">
-            <div class="aeropuerto imagen">
+        <div class=" row lugares">
+            <div class="col-sm-4 col-md-3 col-lg-4 text-center ">
+                <div class="card inicio">
+                    <div class="aeropuerto imagen">
+                        <img src="./images/aeropuertomendoza.jpg" alt="">
+                        <h6><a href="https://maps.app.goo.gl/dbYPEWxQ56JUJA9r5">Aeropuerto El Plumerillo - 10.3km</a></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 col-md-3 col-lg-4 text-center">
+                <div class="card inicio">
+                    <div class="terminal imagen">
+                        <img src="./images/terminal-de-mendoza.jpg" alt="">
+                        <h6><a href="https://maps.app.goo.gl/UEpjCzMdH3nnGodHA">Terminal de omnibus - 2.4km</a></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-3 col-lg-4 text-center">
+                <div class="card inicio">
+                    <div class="Parque imagen">
+                        <img src="./images/parqueGralSanMartin-mendoza.jpeg" alt="">
+                        <h6><a href="https://maps.app.goo.gl/TMNyqj97VVKKffF3A">Parque Gral. San Martín - 1.5km</a></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-3 col-lg-4 text-center">
+                <div class="card inicio">
+                    <div class="uncuyo imagen">
+                        <img src="./images/uncuyo-mendoza.jpg" alt="">
+                        <h6><a href="https://maps.app.goo.gl/qq1fdN8PhqVCKWpD8">Uncuyo Mendoza - 4.0km</a></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-3 col-lg-4 text-center">
+                <div class="card inicio">
+                    <div class="italia imagen">
+                        <img src="./images/consulad-italia-mendoza.jpg" alt="">
+                        <h6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8" target="_blank">Consulado de Italia - 600m</a></h6>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-2 col-md-3 col-lg-4 text-center">
+                <div class="card inicio">
+                    <div class="españa imagen">
+                        <img src="./images/consulado-españa-mendoza.png" alt="">
+                        <h6><a href="https://maps.app.goo.gl/Y7ZbziadjnUXc6bB6">Consulado de España - 1.2km</a></h6>
+                    </div>
+                </div>
+            </div>-->
+
+            <!--<div class="aeropuerto imagen">
                 <img src="./images/aeropuertomendoza.jpg" alt="">
-                <h6><a href="">Aeropuerto El Plumerillo</a></h6>
+                <h6><a href="https://maps.app.goo.gl/dbYPEWxQ56JUJA9r5">Aeropuerto El Plumerillo - 10.3km</a></h6>
             </div>
             <div class="terminal imagen">
                 <img src="./images/terminal-de-mendoza.jpg" alt="">
-                <h6><a href="">Terminal de omnibus Mendoza</a></h6>
-            </div>
-            <div class="uncuyo imagen">
-                <img src="./images/uncuyo-mendoza.jpg" alt="">
-                <h6><a href="">Uncuyo Mendoza</a></h6>
-            </div>
-            <div class="malvinas imagen">
-                <img src="./images/malvinas-argentina-mendoza.jpg" alt="">
-                <h6><a href="">Estidio Malvinas Argentinas</a></h6>
-            </div>
-            <div class="italia imagen">
-                <img src="./images/consulad-italia-mendoza.jpg" alt="">
-                <h6><a href="">Consulado de Italia</a></h6>
-            </div>
-            <div class="españa imagen">
-                <img src="./images/consulado-españa-mendoza.png" alt="">
-                <h6><a href="">Consulado de España</a></h6>
+                <h6><a href="https://maps.app.goo.gl/UEpjCzMdH3nnGodHA">Terminal de omnibus - 2.4km</a></h6>
             </div>
             <div class="Parque imagen">
                 <img src="./images/parqueGralSanMartin-mendoza.jpeg" alt="">
-                <h6><a href="">Parque Gral. San Martín</a></h6>
+                <h6><a href="https://maps.app.goo.gl/TMNyqj97VVKKffF3A">Parque Gral. San Martín - 1.5km</a></h6>
             </div>
-        </div>
+            <div class="uncuyo imagen">
+                <img src="./images/uncuyo-mendoza.jpg" alt="">
+                <h6><a href="https://maps.app.goo.gl/qq1fdN8PhqVCKWpD8">Uncuyo Mendoza - 4.0km</a></h6>
+            </div>
+            <div class="malvinas imagen">
+                <img src="./images/malvinas-argentina-mendoza.jpg" alt="">
+                <h6><a href="https://maps.app.goo.gl/emXqgLtJsdE59naX9">Estidio Malvinas Argentinas - 4.3km</a></h6>
+            </div>
+            <div class="italia imagen">
+                <img src="./images/consulad-italia-mendoza.jpg" alt="">
+                <h6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8" target="_blank">Consulado de Italia - 600m</a></h6>
+            </div>
+            <div class="españa imagen">
+                <img src="./images/consulado-españa-mendoza.png" alt="">
+                <h6><a href="https://maps.app.goo.gl/Y7ZbziadjnUXc6bB6">Consulado de España - 1.2km</a></h6>
+            </div>
+            
+        </div>-->
 
 
 
@@ -130,8 +211,8 @@
         <H6><a href="https://maps.app.goo.gl/emXqgLtJsdE59naX9">Estadio Malvinas Argentinas- 4.3km - hace click</a></H6>
         <H6><a href="https://maps.app.goo.gl/qq1fdN8PhqVCKWpD8">Universidad Nacional de Cuyo- 4.0km - hace click</a></H6>
         <H6><a href="https://maps.app.goo.gl/Y7ZbziadjnUXc6bB6">Consulado de España - 1.2km - hace click</a></H6>
-        <H6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8">Consulado de Italia- 600m - hace click</a></H6>-->
-    </div>
+        <H6><a href="https://maps.app.goo.gl/62yZ5wEtGD7KCqUH8">Consulado de Italia- 600m - hace click</a></H6>
+    </div>-->
 </section>
 
 <section class="lunfardo">
